tests/vulpix-tests/meta/sbt-output.check
[info] Test run started
[info] Test dotty.tools.vulpix.VulpixMetaTests.runAll started
Testing tests/vulpix-tests/meta/run/wrong-check-file.scala
Output from 'tests/vulpix-tests/meta/run/wrong-check-file.scala' did not match check file.
Diff (expected on the left, actual right):
[1m[32mhello[0m  |  [1m[31mworld[0m
[1m[32mworld[0m  |  [1m[31mhello[0m
[51mEOF[0m    |  [51mEOF[0m

[error] Test dotty.tools.vulpix.VulpixMetaTests.runAll failed: java.lang.AssertionError: Run test failed, but should not, reasons:
[error]
[error]   - encountered 1 test failures(s), took 3.697 sec SKIP
[error]     at dotty.tools.vulpix.ParallelTesting$CompilationTest.checkRuns(ParallelTesting.scala:993) SKIP
[error]     at dotty.tools.vulpix.VulpixMetaTests.runAll(VulpixMetaTests.scala:26) SKIP
[error]     ...
[info] Test dotty.tools.vulpix.VulpixMetaTests.compileNeg started
Testing tests/vulpix-tests/meta/neg/missing-error-annotation.scala

Wrong number of errors encountered when compiling out/VulpixMetaTests/neg/missing-error-annotation, expected: 0, actual: 2
[error] Test dotty.tools.vulpix.VulpixMetaTests.compileNeg failed: java.lang.AssertionError: Neg test shouldn't have failed, but did. Reasons:
[error]
[error]   - encountered 1 test failures(s), took 0.156 sec SKIP
[error]     at dotty.tools.vulpix.ParallelTesting$CompilationTest.checkExpectedErrors(ParallelTesting.scala:975) SKIP
[error]     at dotty.tools.vulpix.VulpixMetaTests.compileNeg(VulpixMetaTests.scala:25) SKIP
[error]     ...
[info] Test dotty.tools.vulpix.VulpixMetaTests.compilePos started
Testing tests/vulpix-tests/meta/pos/does-not-compile.scala
-- [E006] Unbound Identifier Error: /home/olivier/workspace/dotty/tests/vulpix-tests/meta/pos/does-not-compile.scala:2:2 SKIP
2 |  a // Does not compile
  |  ^
  |  not found: a
[error] Test dotty.tools.vulpix.VulpixMetaTests.compilePos failed: java.lang.AssertionError: Expected no errors when compiling, failed for the following reason(s):
[error]
[error]   - encountered 1 test failure(s), took 0.069 sec SKIP
[error]     at dotty.tools.vulpix.ParallelTesting$CompilationTest.checkCompile(ParallelTesting.scala:958) SKIP
[error]     at dotty.tools.vulpix.VulpixMetaTests.compilePos(VulpixMetaTests.scala:24) SKIP
[error]     ...
[info] Test run finished: 3 failed, 0 ignored, 3 total, 1.982s SKIP
[error] Failed: Total 3, Failed 3, Errors 0, Passed 0
[error] Failed tests:
[error] 	dotty.tools.vulpix.VulpixMetaTests
[error] (dotty-compiler / Test / testOnly) sbt.TestsFailedException: Tests unsuccessful
[error] Total time: 3 s, completed Feb 5, 2018 5:10:12 PM SKIP
